@@ -14,4 +14,7 @@ MANIFEST			This list of files
 META.yml
 README
 samples/list.pl
-test.pl
+t/POE-Filter-Ls/00-use.t
+t/POE-Filter-Ls/01-version.t
+t/POE-Filter-Ls/02-pod_coverage.t
+t/POE-Filter-Ls/03-pod.t
