@@ -1,0 +1,10 @@
+# Pragmas.
+use strict;
+use warnings;
+
+# Modules.
+use Test::NoWarnings;
+use Test::Pod::Coverage 'tests' => 2;
+
+# Test.
+pod_coverage_ok('POE::Filter::Ls', 'POE::Filter::Ls is covered.');
